--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,9 @@
   <!-- Main Content -->
   <main>
     <h2>Contact Me</h2>
-    <p>If you’d like to reach out, feel free to email me at: <strong>your-email@example.com</strong></p>
-    <p>You can also connect with me on social media or leave a comment on my blog posts!</p>
+    <p>If you’d like to reach out, feel free to email me at: <strong>bagoriasaurabh87@gmail.com</strong></p>
+    <p>You can also connect with me on social media or leave a comment on my blog posts!
+          Instagram - saurabh_s_bagoria</p>
   </main>
 
   <!-- Footer -->
@@ -33,3 +34,4 @@
 
 </body>
 </html>
+
