--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
     <h2>Contact Me</h2>
     <p>If you’d like to reach out, feel free to email me at: <strong>bagoriasaurabh87@gmail.com</strong></p>
     <p>You can also connect with me on social media or leave a comment on my blog posts!
-          Instagram - saurabh_s_bagoria</p>
+        Instagram - saurabh_s_bagoria
+    </p>
   </main>
 
   <!-- Footer -->
@@ -34,4 +35,3 @@
 
 </body>
 </html>
-
